- simplified contact page code - corrected order of shop/pages on mobile nav - decrease size of ‘your cart is empty’ message

--- a/source/stylesheets/cart.css.scss
+++ b/source/stylesheets/cart.css.scss
@@ -3,6 +3,14 @@
 .cart_holder { 
   border-bottom: 2px solid $primary-color;
 }
+
+.cart_message { 
+  
+  h3 { 
+    font-size: 28px;
+    line-height: 28px;
+  }
+}
 .cart_content {
   margin: 0 auto;
   max-width: 810px;
